fix gap

--- a/packages/amplication-client/src/Resource/create-resource/CreateServiceWizard.scss
+++ b/packages/amplication-client/src/Resource/create-resource/CreateServiceWizard.scss
@@ -34,8 +34,7 @@ $max-width: 700px;
     justify-content: center;
     align-items: center;
     width: 66%;
-    gap: 24px;
-
+    
     .circle-badge i {
       color: var(--black5);
     }
